Bug#19371 VARBINARY() have trailing zeros after upgrade from 4.1  - Detect if a table has field of type MYSQL_TYPE_VAR_STRING while running    "CHECK TABLE t FOR UPGRADE" and indicate it need to be fixed    with "REPAIR TABLE t".  - When running a "REPAIR TABLE t" or "ALTER TABLE t FORCE" on the above    table, install a special copy function to trim off the trailing spaces    which we safely can say that the pre 5.0 mysqld didn't put there.